force-app/main/default/objects/Order_Form__c/Order_Form__c.object-meta.xml
<CustomObject>
    <description>Simple messages for Order Form requirements that can be attached to Offerings to notify Sales users when selecting those Offerings.</description>
    <label>Order Form</label>
    <nameField>
        <label>Order Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>