force-app/main/default/objects/Order_Form__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Used to control popups only appearing for the channels that they apply to within iContract</description>
    <inlineHelpText>Used to control popups only appearing for the channels that they apply to within iContract</inlineHelpText>
    <label>Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>ARG</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Finance&amp;Pricing</fullName>
            </value>
            <value>
                <fullName>iContract</fullName>
            </value>
            <value>
                <fullName>iMeetCentral</fullName>
            </value>
            <value>
                <fullName>Information Systems</fullName>
            </value>
            <value>
                <fullName>IST Team</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Major Accounts</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>ReadyTalk</fullName>
            </value>
            <value>
                <fullName>Sales Engineers</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
            <value>
                <fullName>TalkPoint</fullName>
            </value>
            <value>
                <fullName>Tier One</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>