force-app/main/default/objects/Order_Form__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title/Header shown for the user to acknowledge.</description>
    <inlineHelpText>Title/Header shown for the user to acknowledge.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>