force-app/main/default/objects/Order_Form__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique ID for migrating between Sandboxes/Production</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID for migrating between Sandboxes/Production</inlineHelpText>
    <label>Unique ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>